main/default/objects/TeleMeet__c/TeleMeet__c.object-meta.xml
<CustomObject>
    <label>Connect</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Connect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>