main/default/objects/TeleMeet__c/fields/Connect_Configurator__c.field-meta.xml
<CustomField>
    <fullName>Connect_Configurator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect Configurator</label>
    <referenceTo>Connect_Configurator__c</referenceTo>
    <relationshipLabel>Connect</relationshipLabel>
    <relationshipName>Connect</relationshipName>
    <type>Lookup</type>
</CustomField>