main/default/objects/TeleMeet__c/fields/ContactAvailabilityId__c.field-meta.xml
<CustomField>
    <fullName>ContactAvailabilityId__c</fullName>
    <label>ContactAvailabilityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>