main/default/objects/TeleMeet__c/fields/Create_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Create_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Follow-up</label>
    <type>Checkbox</type>
</CustomField>