main/default/objects/TeleMeet__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipName>TeleMeets</relationshipName>
    <type>Lookup</type>
</CustomField>