main/default/objects/TeleMeet__c/fields/External_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Notes__c</fullName>
    <label>External Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>