main/default/objects/TeleMeet__c/fields/Health_Summary__c.field-meta.xml
<CustomField>
    <fullName>Health_Summary__c</fullName>
    <label>Health Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>