main/default/objects/TeleMeet__c/fields/HPI_Notes__c.field-meta.xml
<CustomField>
    <fullName>HPI_Notes__c</fullName>
    <label>HPI Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>