main/default/objects/TeleMeet__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>