main/default/objects/TeleMeet__c/fields/Meeting_URL2__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL2__c</fullName>
    <formula>HYPERLINK($CustomMetadata.Integration_Configuration__mdt.Chime_Integration.Endpoint__c + &apos;?m=&apos; + Id + &apos;&amp;n=&apos; +  SUBSTITUTE($User.FirstName, &apos; &apos;, &apos;%20&apos;)    , &apos;Join Now&apos; , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting URL</label>
    <type>Text</type>
</CustomField>