main/default/objects/TeleMeet__c/fields/Meeting_URL_for_Email_Notif__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL_for_Email_Notif__c</fullName>
    <formula>$CustomMetadata.Integration_Configuration__mdt.Chime_Integration.Endpoint__c + &apos;?m=&apos; + Id + &apos;&amp;n=&apos; + SUBSTITUTE($User.FirstName, &apos; &apos;, &apos;%20&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting URL for Email Notif</label>
    <type>Text</type>
</CustomField>