main/default/objects/TeleMeet__c/fields/My_Medications__c.field-meta.xml
<CustomField>
    <fullName>My_Medications__c</fullName>
    <label>My Medications</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>