main/default/objects/TeleMeet__c/fields/Other_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Area__c</fullName>
    <label>Other Area Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>