main/default/objects/TeleMeet__c/fields/Patient_Problems__c.field-meta.xml
<CustomField>
    <fullName>Patient_Problems__c</fullName>
    <label>Patient Problems</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>