main/default/objects/TeleMeet__c/fields/Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Detail__c</fullName>
    <label>Reason Detail</label>
    <type>TextArea</type>
</CustomField>