main/default/objects/TeleMeet__c/fields/Resource_Contact__c.field-meta.xml
<CustomField>
    <fullName>Resource_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>TeleMeets</relationshipName>
    <type>Lookup</type>
</CustomField>