main/default/objects/TeleMeet__c/fields/Resource_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Resource_Specialty__c</fullName>
    <label>Resource Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>General Medicine</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>