main/default/objects/TeleMeet__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <formula>TEXT(Resource_Contact__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>