main/default/objects/TeleMeet__c/fields/Service_Builder__c.field-meta.xml
<CustomField>
    <fullName>Service_Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Builder</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Connect</relationshipLabel>
    <relationshipName>Connect</relationshipName>
    <type>Lookup</type>
</CustomField>