main/default/objects/TeleMeet__c/fields/Show_in_Lobby__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Lobby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Lobby</label>
    <type>Checkbox</type>
</CustomField>