main/default/objects/TeleMeet__c/fields/Target_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Appointment_Date__c</fullName>
    <label>Target Appointment Date</label>
    <type>Date</type>
</CustomField>