main/default/objects/TeleMeet__c/fields/TeleMeet_URL__c.field-meta.xml
<CustomField>
    <fullName>TeleMeet_URL__c</fullName>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>