main/default/objects/TeleMeet__c/fields/Total_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants__c</fullName>
    <label>Total Participants</label>
    <summaryForeignKey>TeleMeet_Participant__c.TeleMeet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>