main/default/objects/TeleMeet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Connect Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Tele-education</fullName>
            </value>
            <value>
                <fullName>Teletraining</fullName>
            </value>
            <value>
                <fullName>VirtuVisit</fullName>
            </value>
            <value>
                <fullName>Navigator Connect</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>