main/default/objects/TeleMeet__c/fields/VirtuVisit_Link__c.field-meta.xml
<CustomField>
    <fullName>VirtuVisit_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://ncc--staging.sandbox.my.site.com/Connect/s/lobby?configId=&quot;+Connect_Configurator__c+&quot;&amp;id=&quot;+Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Virtual Lobby</label>
    <type>Text</type>
</CustomField>