main/default/objects/TeleMeet__c/recordTypes/Change_Management.recordType-meta.xml
<RecordType>
    <fullName>Change_Management</fullName>
    <active>true</active>
    <label>Change Management</label>
</RecordType>