main/default/objects/TeleMeet__c/recordTypes/VirtuVisit.recordType-meta.xml
<RecordType>
    <fullName>VirtuVisit</fullName>
    <active>true</active>
    <label>VirtuVisit</label>
</RecordType>