main/default/objects/TeleMeet__c/validationRules/Validate_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>24 * (End_Date_Time__c - Start_Date_Time__c) &gt; 1</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>The maximum duration is 60 minutes.</errorMessage>
</ValidationRule>