main/default/objects/TeleMeet__c/validationRules/Validate_End_Date_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date_Time</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date_Time__c &lt; Start_Date_Time__c</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Please add a valid value.</errorMessage>
</ValidationRule>