main/default/objects/TeleMeet__c/validationRules/Validate_Scheduled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Scheduled_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;Scheduled&apos;),
Total_Participants__c &lt;= 0)</errorConditionFormula>
    <errorMessage>Unable to schedule TeleMeet due to there are no participants.</errorMessage>
</ValidationRule>